# arbores-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  REPL_CTRLC_TEST.md  debug_yaml.rs  generate_edge_cases.rs  test.sh  test_ctrlc_fix.bat  test_enhanced_repl.sh  test_repl_ctrlc.bat
demos/: mod.rs  source_builder_demo.rs  stage2_demo.rs
demos/legacy/: callstack_demo.rs  error_position_demo.rs  mod.rs
demos/lexer/: demo.rs  mod.rs  number_demo.rs
docs/: Coding_Conventions.md  ENHANCED_REPL_SHOWCASE.md  Module_Arbores_CLI.md  Module_Arbores_Interpreter.md  Module_Arbores_Repository_Manager.md  Project_Arbores.md  REPL_IMPROVEMENT_RESEARCH.md  error_position_system_design.md  projet-arbores.md
docs/interpreter/: Environment_Management.md  Evaluator_Design.md  Evaluator_Implementation_Progress.md  Evaluator_Optimization_Analysis.md  Lexer_Design.md  Lexer_Progress.md  Macro_Expander.md  Parser_Design.md  Span_Design.md  (+3 more)
examples/: arithmetic.scm  arithmetic_test.scm  callstack_demo.rs  callstack_test.scm  debug_parser_positions.rs  debug_undefined_vars.rs  detailed_callstack_test.scm  enhanced_repl_demo.rs  enhanced_repl_demo.scm  error_position_demo.rs  extended_symbols_demo.scm  lists.scm  new_lexer_demo.rs  number_parsing_demo.rs  pretty_print_demo.rs  special_forms.scm  stage1_complete.scm  stage2_demo.rs
src/: arbores.rs  lib.rs  main.rs
tests/: cli_tests.rs  evaluator_benchmarks.rs  evaluator_tests.rs  generate_fixture.rs  lexer_number_parsing.rs  lexer_span_tests.rs  parser_fixture_tests.rs  parser_integration.rs
tools/: README.md  generate_fixture.rs
(+101 files in other folders)
