[package]
name = "arbores"
version = "0.1.0"
edition = "2021"
authors = ["weiwei"]
description = "A Scheme-compatible Lisp interpreter written in Rust"
license = "MIT"
repository = "https://github.com/weiwei/arbores-rs"
keywords = ["scheme", "lisp", "interpreter", "functional"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "arbores"
path = "src/main.rs"

[lib]
name = "arbores"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4"

[dev-dependencies]
