[package]
name = "arbores"
version = "0.1.0"
edition = "2021"
authors = ["weiwei"]
description = "A Scheme-compatible Lisp interpreter written in Rust"
license = "MIT"
repository = "https://github.com/weiwei/arbores-rs"
keywords = ["scheme", "lisp", "interpreter", "functional"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "arbores"
path = "src/main.rs"

[[bin]]
name = "generate_fixture"
path = "tools/generate_fixture.rs"

[[example]]
name = "source_builder_demo"
path = "demos/source_builder_demo.rs"

[lib]
name = "arbores"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4"
rustyline = "10.0"
clap = { version = "4.0", features = ["derive"] }
atty = "0.2"
lazy_static = "1.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
